--- a/tabella.html
+++ b/tabella.html
@@ -41,7 +41,7 @@
         <label style="color:white" for="citta">Città:</label>
         <input type="text" id="citta" name="citta" required><br>
         
-        <button type="button" onclick="aggiungiDati()">Aggiungi</button>
+        <button type="button" onclick="aggiungiDati()">Aggiungi!</button>
 <br>
     </form>
 
