--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 </div>
 
 <div class="container">
-    <div class="work-box" onclick="window.location.href='https://andrebr00.github.io/Drago.gay/tabmigranti">
+    <div class="work-box" onclick="window.location.href='https://andrebr00.github.io/Drago.gay/tabmigranti';">
         <p>Tabella Migranti</p>
     </div>
     <div class="work-box" onclick="window.location.href='https://andrebr00.github.io/Drago.gay/ordinamento';">
