--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="work-box" onclick="window.location.href='https://andrebr00.github.io/Drago.gay/tabmigranti';">
         <p>Tabella Migranti</p>
     </div>
-    <div class="work-box" onclick="window.location.href='https://andrebr00.github.io/Drago.gay/ordinamento';">
+    <div class="work-box" onclick="window.location.href='https://andrebr00.github.io/Drago.gay/stella';">
         <p>Inserire progetto</p>
     </div>
     <div class="work-box" onclick="window.location.href='https://andrebr00.github.io/Drago.gay/localStorage';">
