--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <p>Tabella Migranti</p>
     </div>
     <div class="work-box" onclick="window.location.href='https://andrebr00.github.io/Drago.gay/stella';">
-        <p>Inserire progetto</p>
+        <p>Stella a 5 Punte</p>
     </div>
     <div class="work-box" onclick="window.location.href='https://andrebr00.github.io/Drago.gay/localStorage';">
         <p>Inserire progetto</p>
