--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
     <div class="work-box" onclick="window.location.href='https://andrebr00.github.io/Drago.gay/stella';">
         <p>Stella a 5 Punte</p>
     </div>
-    <div class="work-box" onclick="window.location.href='https://andrebr00.github.io/Drago.gay/localStorage';">
-        <p>Inserire progetto</p>
+    <div class="work-box" onclick="window.location.href='https://andrebr00.github.io/Drago.gay/graficomigranti';">
+        <p>Tabella e Grafico Migranti</p>
     </div>
     <div class="work-box" onclick="window.location.href='https://andrebr00.github.io/Drago.gay/secondoGrado';">
         <p>Inserire progetto</p>
