--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
     <div class="work-box" onclick="window.location.href='https://andrebr00.github.io/Drago.gay/graficomigranti';">
         <p>Tabella e Grafico Migranti</p>
     </div>
-    <div class="work-box" onclick="window.location.href='https://andrebr00.github.io/Drago.gay/secondoGrado';">
-        <p>Inserire progetto</p>
+    <div class="work-box" onclick="window.location.href='https://andrebr00.github.io/Drago.gay/migrantiAggiornati';">
+        <p>Tabella e Grafico Migranti Aggiornato(.csv)</p>
     </div>
 </div>
 
