--- a/index.html
+++ b/index.html
@@ -114,6 +114,20 @@
 </div>
 <br><br>
 
+    <div class="container">
+    <div class="work-box" onclick="window.location.href='https://andrebr00.github.io/Drago.gay/tabella';">
+        <p>Inserire progetto</p>
+    </div>
+    <div class="work-box" onclick="window.location.href='https://andrebr00.github.io/Drago.gay/ordinamento';">
+        <p>Inserire progetto</p>
+    </div>
+    <div class="work-box" onclick="window.location.href='https://andrebr00.github.io/Drago.gay/localStorage';">
+        <p>Inserire progetto</p>
+    </div>
+    <div class="work-box" onclick="window.location.href='https://andrebr00.github.io/Drago.gay/secondoGrado';">
+        <p>Inserire progetto</p>
+    </div>
+</div>
 <footer>
     &copy; 2024 Andrebr0_0 - Tutti i diritti riservati.
 </footer>
