--- a/Dettagli.html
+++ b/Dettagli.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dettagli</title>
- <style>
+  <title>Dettagli Funko Pop</title>
+  <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
@@ -20,96 +20,74 @@
       font-weight: bold;
     }
 
-    .product-container {
+    .details-container {
       display: flex;
-      justify-content: space-between;
-      padding: 30px;
-      max-width: 1200px;
-      margin: 0 auto;
+      flex-direction: column;
+      align-items: center;
+      padding: 40px;
     }
 
-    .product-info {
-      width: 45%;
+    .details-container img {
+      width: 250px;
+      height: auto;
+      object-fit: contain;
+      margin-bottom: 20px;
     }
 
-    .product-img {
-      width: 45%;
+    .details-info {
+      background-color: white;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+      width: 100%;
+      max-width: 400px;
     }
 
-    .product-img img {
-      width: 234px;
-      height: 234px;
-      object-fit: cover;
+    .details-info h2 {
+      margin-top: 0;
     }
 
-    .product-info h2 {
-      font-size: 24px;
-    }
-
-    .product-info p {
-      font-size: 18px;
+    .details-info p {
       margin: 10px 0;
-    }
-
-    .button-container {
-      margin-top: 20px;
-    }
-
-    button {
-      background-color: #28a745;
-      color: white;
-      border: none;
-      padding: 10px 15px;
-      border-radius: 5px;
-      cursor: pointer;
       font-size: 16px;
-      margin-right: 10px;
-    }
-
-    button:hover {
-      background-color: #218838;
-    }
-
-    .return-button {
-      background-color: #007bff;
-    }
-
-    .return-button:hover {
-      background-color: #0056b3;
     }
   </style>
 </head>
 <body>
   <div class="header">
-    Dettagli Telefono
+    Dettagli Funko Pop
   </div>
 
-  <div class="product-container">
-    <div class="product-info">
-      <h2 id="phoneName"></h2>
-      <p><strong>Marca:</strong> <span id="phoneBrand"></span></p>
-      <p><strong>Prezzo:</strong> <span id="phonePrice"></span></p>
-      <p><strong>Dettagli:</strong> <span id="phoneDetails"></span></p>
-      <div class="button-container">
-        <button>Aggiungi al carrello</button>
-        <button class="return-button" onclick="window.location.href='HomeE-commerce.html'">Ritorna alla Home</button>
-      </div>
-    </div>
-
-    <div class="product-img">
-      <img id="phoneImage" src="" alt="Immagine del telefono">
-    </div>
+  <div class="details-container" id="detailsContainer">
+    <!-- Dettagli caricati da JavaScript -->
   </div>
 
   <script>
-    let telefono = JSON.parse(localStorage.getItem('telefono'));
+    let prodotto = JSON.parse(localStorage.getItem('prodotto'));
+    let detailsContainer = document.getElementById('detailsContainer');
 
-    if (telefono) {
-      document.getElementById('phoneName').innerText = telefono.nome;
-      document.getElementById('phoneBrand').innerText = telefono.marca;
-      document.getElementById('phonePrice').innerText = telefono.prezzo;
-      document.getElementById('phoneDetails').innerText = `RAM: ${telefono.ram}, Memoria: ${telefono.memoria}, Fotocamera: ${telefono.fotocamera}, Frequenza: ${telefono.frequenza}`;
-      document.getElementById('phoneImage').src = telefono.imgUrl;
+    if (prodotto) {
+      // immagine del Funko Pop
+      let productImg = document.createElement('img');
+      productImg.src = prodotto.imgUrl;
+      productImg.alt = prodotto.nome;
+
+      // informazioni dettagliate
+      let infoContainer = document.createElement('div');
+      infoContainer.classList.add('details-info');
+
+      infoContainer.innerHTML = `
+        <h2>${prodotto.nome}</h2>
+        <p><strong>Prezzo:</strong> €${prodotto.prezzo.toFixed(2)}</p>
+        <p><strong>Altezza:</strong> ${prodotto.altezza} cm</p>
+        <p><strong>Grado di esclusività:</strong> ${prodotto.esclusivita}</p>
+        <p><strong>Descrizione:</strong> ${prodotto.descrizione}</p>
+      `;
+
+      detailsContainer.appendChild(productImg);
+      detailsContainer.appendChild(infoContainer);
+    } else {
+      detailsContainer.innerHTML = '<p>Errore: prodotto non trovato.</p>';
     }
   </script>
 </body>
