--- a/funkopop.html
+++ b/funkopop.html
@@ -1,102 +1,118 @@
 <!DOCTYPE html>
-<html lang="it">
+<html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Funko Pop</title>
+  <title>apple</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       background-color: #f0f0f0;
     }
+    .cart-link {      
+      position: absolute;   
+      top: 10px;   
+      left: 10px;      
+      color: white;     
+      font-size: 16px;      
+      text-decoration: none;    
+      background-color: rgba(0,0,0,0.3);       
+      padding: 5px 10px;       
+      border-radius: 4px;    
+    }  
+   .header {
+  background-color: #90ee90;
+  color: white;
+  text-align: center;
+  padding: 20px;
+  font-size: 24px;
+  font-weight: bold;
+}
 
-    .header {
-      background-color: #90ee90;
-      color: white;
-      text-align: center;
-      padding: 20px;
-      font-size: 24px;
-      font-weight: bold;
-    }
+.phones-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 30px;
+  padding: 30px;
+}
 
-    .products-container {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 30px;
-      padding: 30px;
-    }
+.phone {
+  text-align: center;
+  cursor: pointer;
+  width: 200px;
+}
 
-    .product {
-      text-align: center;
-      cursor: pointer;
-      width: 200px;
-      transition: transform 0.2s;
-    }
+.phone img {
+  width: 150px;
+  height: 150px;
+  object-fit: contain;
+  background-color: white;
+}
 
-    .product:hover {
-      transform: scale(1.05);
-    }
-
-    .product img {
-      width: 150px;
-      height: 150px;
-      object-fit: contain;
-    }
-
-    .product div {
-      margin-top: 10px;
-      font-weight: bold;
-      font-size: 16px;
-    }
+.phone div {
+  margin-top: 10px;
+  font-weight: bold;
+}
   </style>
 </head>
 <body>
+  <a href="Carrello.html" class="cart-link">Carrello</a> 
   <div class="header">
-    Funko Pop
+    Apple
   </div>
 
-  <div class="products-container" id="productsContainer">
+  <div class="phones-container" id="phonesContainer">
+   
   </div>
 
-  <script>
-    let prodotti = JSON.parse(localStorage.getItem('prodotti'));
-    let productsContainer = document.getElementById('productsContainer');
-
-    // filtro solo i prodotti della categoria "Funko Pop"
-    let funkoPop = prodotti.filter(function(p) {
-      return p.categoria === 'Funko Pop';
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    let telefoni = JSON.parse(localStorage.getItem('telefoni')) || [];
+    let phonesContainer = document.getElementById('phonesContainer');
+    let applePhones = telefoni.filter(function(t) {
+      return t.marca === 'Apple';
     });
 
-    funkoPop.forEach(function(prodotto) {
-      let productElement = document.createElement('div');
-      productElement.classList.add('product');
-      productElement.onclick = function() {
-        vaiAllaPaginaDettaglio(prodotto.nome);
+    applePhones.forEach(function(phone) {
+      let phoneElement = document.createElement('div');
+      phoneElement.classList.add('phone');
+      phoneElement.setAttribute('onclick', 'vaiAllaPaginaTelefono("' + phone.nome + '")');
+
+      let phoneImg = document.createElement('img');
+      phoneImg.src = phone.imgUrl;
+      phoneImg.alt = phone.nome;
+      phoneImg.onerror = function() {
+        this.src = 'images/placeholder.png';
       };
 
-      let productImg = document.createElement('img');
-      productImg.src = prodotto.imgUrl;
-      productImg.alt = prodotto.nome;
+      let phoneNome = document.createElement('div');
+      phoneNome.innerText = phone.nome;
 
-      let productNome = document.createElement('div');
-      productNome.innerText = prodotto.nome;
-
-      productElement.appendChild(productImg);
-      productElement.appendChild(productNome);
-      productsContainer.appendChild(productElement);
+      phoneElement.appendChild(phoneImg);
+      phoneElement.appendChild(phoneNome);
+      phonesContainer.appendChild(phoneElement);
     });
+  });
 
-    function vaiAllaPaginaDettaglio(nomeProdotto) {
-      let prodotto = prodotti.find(function(p) {
-        return p.nome === nomeProdotto;
-      });
-      if (prodotto) {
-        localStorage.setItem('prodotto', JSON.stringify(prodotto));
-        window.location.href = 'Dettagli.html'; // vai alla pagina di dettaglio
+  function vaiAllaPaginaTelefono(nomeTelefono) {
+    let telefoni = JSON.parse(localStorage.getItem('telefoni')) || [];
+    for (let i = 0; i < telefoni.length; i++) {
+      if (telefoni[i].nome === nomeTelefono) {
+        localStorage.setItem('telefono', JSON.stringify(telefoni[i]));
+        window.location.href = 'Dettagli.html';
+        break;
       }
     }
-  </script>
+  }
+</script>
+
 </body>
 </html>
+
+
+
+
+    
+   
