--- a/xiaomi.html
+++ b/xiaomi.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it">
+<html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,17 @@
       margin: 0;
       background-color: #f0f0f0;
     }
-
+    .cart-link {      
+      position: absolute;   
+      top: 10px;   
+      left: 10px;      
+      color: white;     
+      font-size: 16px;      
+      text-decoration: none;    
+      background-color: rgba(0,0,0,0.3);       
+      padding: 5px 10px;       
+      border-radius: 4px;    
+    }  
     .header {
       background-color: #90ee90;
       color: white;
@@ -46,6 +56,7 @@
   </style>
 </head>
 <body>
+  <a href="Carrello.html" class="cart-link">Carrello</a> 
   <div class="header">
     Xiaomi
   </div>
