--- a/RegistrazioneE-commerce.html
+++ b/RegistrazioneE-commerce.html
@@ -108,7 +108,7 @@
 
 </head>
 <body>
-  <h1>E-commerce di Altimani</h1>
+  <h1>ActionVerse</h1>
   <h3>Registrati</h3>
 
   <form id="formRegistrazione">
