--- a/HomeE-commerce.html
+++ b/HomeE-commerce.html
@@ -4,112 +4,69 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HomeE-commerce</title>
-<style>
-  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
-
-  * {
-    box-sizing: border-box;
-  }
-
-  body {
-    font-family: 'Inter', sans-serif;
-    margin: 0;
-    background-color: #111;
-    color: white;
-  }
-
-  .header {
-    background-color: #ff6b00;
-    color: white;
-    text-align: center;
-    padding: 1.5rem 1rem;
-    font-size: 1.8rem;
-    font-weight: 700;
-    position: relative;
-  }
-
-  .cart-link {
-    position: absolute;
-    top: 15px;
-    left: 15px;
-    color: white;
-    font-size: 14px;
-    text-decoration: none;
-    background-color: rgba(0,0,0,0.5);
-    padding: 8px 12px;
-    border-radius: 5px;
-    font-weight: 600;
-    transition: background-color 0.2s ease;
-  }
-
-  .cart-link:hover {
-    background-color: rgba(0,0,0,0.8);
-  }
-
-  .header span {
-    font-weight: 400;
-    font-size: 1.3rem;
-    display: block;
-    margin-top: 0.3rem;
-  }
-
-  .marche-container {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 40px;
-    padding: 40px 20px;
-  }
-
-  .marca {
-    text-align: center;
-    cursor: pointer;
-    transition: transform 0.2s ease;
-    background-color: #1c1c1c;
-    padding: 20px;
-    border-radius: 12px;
-    box-shadow: 0 0 10px rgba(255, 107, 0, 0.2);
-  }
-
-  .marca:hover {
-    transform: scale(1.08);
-    box-shadow: 0 0 18px rgba(255, 107, 0, 0.5);
-  }
-
-  .marca img {
-    width: 100px;
-    height: 100px;
-    object-fit: contain;
-    margin-bottom: 10px;
-    filter: brightness(0) invert(1);
-  }
-
-  .marca div {
-    color: #ff6b00;
-    font-weight: 700;
-    font-size: 1.1rem;
-  }
-
-  @media (max-width: 600px) {
-    .header {
-      font-size: 1.5rem;
+   <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background-color: #f0f0f0;
     }
 
+    .header {
+      background-color: #90ee90;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      font-size: 24px;
+      font-weight: bold;
+    }
+     .cart-link {      
+      position: absolute;   
+      top: 10px;   
+      left: 10px;      
+      color: white;     
+      font-size: 16px;      
+      text-decoration: none;    
+      background-color: rgba(0,0,0,0.3);       
+      padding: 5px 10px;       
+      border-radius: 4px;    
+    }  
+
     .header span {
-      font-size: 1rem;
+      font-weight: normal;
+      font-size: 20px;
+    }
+
+    .marche-container {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 30px;
+      padding: 30px;
     }
 
     .marca {
-      padding: 15px;
+      text-align: center;
+      cursor: pointer;
     }
 
     .marca img {
-      width: 80px;
-      height: 80px;
+      width: 110px;
+      height: 110px;
+      object-fit: contain;
+     
     }
-  }
-</style>
 
+    .marca div {
+      margin-top: 10px;
+      font-weight: bold;
+    }
+
+    @media (max-width: 600px) {
+      .header {
+        font-size: 20px;
+      }
+    }
+  </style>
 </head>
 <body>
   <a href="Carrello.html" class="cart-link">Carrello</a> 
