--- a/apple.html
+++ b/apple.html
@@ -1,154 +1,118 @@
 <!DOCTYPE html>
-<html lang="it">
+<html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Apple</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <title>apple</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
     body {
-      font-family: 'Inter', sans-serif;
+      font-family: Arial, sans-serif;
       margin: 0;
-      background-color: #f9fafb;
-      padding-bottom: 60px;
-    }
-
-    .cart-link {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background-color: #2563eb;
-      color: white;
-      font-size: 16px;
-      text-decoration: none;
-      padding: 0.75rem 1.5rem;
-      border-radius: 8px;
-      font-weight: 600;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-      transition: background-color 0.2s ease;
-    }
-
-    .cart-link:hover {
-      background-color: #1d4ed8;
-    }
-
-    .header {
-      background-color: #4ade80;
-      color: white;
-      text-align: center;
-      padding: 1.5rem;
-      font-size: 1.8rem;
-      font-weight: bold;
-      border-bottom-left-radius: 12px;
-      border-bottom-right-radius: 12px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    }
-
-    .phones-container {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 2rem;
-      padding: 2rem;
-    }
-
-    .phone {
-      background-color: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.06);
-      text-align: center;
-      width: 220px;
-      padding: 1rem;
-      transition: transform 0.2s;
-      cursor: pointer;
-    }
-
-    .phone:hover {
-      transform: scale(1.03);
-    }
-
-    .phone img {
-      width: 150px;
-      height: 150px;
-      object-fit: contain;
-      border-radius: 8px;
       background-color: #f0f0f0;
     }
+    .cart-link {      
+      position: absolute;   
+      top: 10px;   
+      left: 10px;      
+      color: white;     
+      font-size: 16px;      
+      text-decoration: none;    
+      background-color: rgba(0,0,0,0.3);       
+      padding: 5px 10px;       
+      border-radius: 4px;    
+    }  
+   .header {
+  background-color: #90ee90;
+  color: white;
+  text-align: center;
+  padding: 20px;
+  font-size: 24px;
+  font-weight: bold;
+}
 
-    .phone div {
-      margin-top: 10px;
-      font-weight: 600;
-      color: #333;
-    }
+.phones-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 30px;
+  padding: 30px;
+}
 
-    @media (max-width: 480px) {
-      .phones-container {
-        padding: 1rem;
-      }
+.phone {
+  text-align: center;
+  cursor: pointer;
+  width: 200px;
+}
 
-      .phone {
-        width: 100%;
-      }
+.phone img {
+  width: 150px;
+  height: 150px;
+  object-fit: contain;
+  background-color: white;
+}
 
-      .cart-link {
-        padding: 0.6rem 1.2rem;
-        font-size: 14px;
-      }
-    }
+.phone div {
+  margin-top: 10px;
+  font-weight: bold;
+}
   </style>
 </head>
 <body>
-  <a href="Carrello.html" class="cart-link">Visualizza Carrello</a> 
-
+  <a href="Carrello.html" class="cart-link">Carrello</a> 
   <div class="header">
     Apple
   </div>
 
-  <div class="phones-container" id="phonesContainer"></div>
+  <div class="phones-container" id="phonesContainer">
+   
+  </div>
 
-  <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      let telefoni = JSON.parse(localStorage.getItem('telefoni')) || [];
-      let phonesContainer = document.getElementById('phonesContainer');
-      let applePhones = telefoni.filter(function(t) {
-        return t.marca === 'Apple';
-      });
-
-      applePhones.forEach(function(phone) {
-        let phoneElement = document.createElement('div');
-        phoneElement.classList.add('phone');
-        phoneElement.setAttribute('onclick', 'vaiAllaPaginaTelefono("' + phone.nome + '")');
-
-        let phoneImg = document.createElement('img');
-        phoneImg.src = phone.imgUrl;
-        phoneImg.alt = phone.nome;
-        phoneImg.onerror = function() {
-          this.src = 'images/placeholder.png';
-        };
-
-        let phoneNome = document.createElement('div');
-        phoneNome.innerText = phone.nome;
-
-        phoneElement.appendChild(phoneImg);
-        phoneElement.appendChild(phoneNome);
-        phonesContainer.appendChild(phoneElement);
-      });
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    let telefoni = JSON.parse(localStorage.getItem('telefoni')) || [];
+    let phonesContainer = document.getElementById('phonesContainer');
+    let applePhones = telefoni.filter(function(t) {
+      return t.marca === 'Apple';
     });
 
-    function vaiAllaPaginaTelefono(nomeTelefono) {
-      let telefoni = JSON.parse(localStorage.getItem('telefoni')) || [];
-      for (let i = 0; i < telefoni.length; i++) {
-        if (telefoni[i].nome === nomeTelefono) {
-          localStorage.setItem('telefono', JSON.stringify(telefoni[i]));
-          window.location.href = 'Dettagli.html';
-          break;
-        }
+    applePhones.forEach(function(phone) {
+      let phoneElement = document.createElement('div');
+      phoneElement.classList.add('phone');
+      phoneElement.setAttribute('onclick', 'vaiAllaPaginaTelefono("' + phone.nome + '")');
+
+      let phoneImg = document.createElement('img');
+      phoneImg.src = phone.imgUrl;
+      phoneImg.alt = phone.nome;
+      phoneImg.onerror = function() {
+        this.src = 'images/placeholder.png';
+      };
+
+      let phoneNome = document.createElement('div');
+      phoneNome.innerText = phone.nome;
+
+      phoneElement.appendChild(phoneImg);
+      phoneElement.appendChild(phoneNome);
+      phonesContainer.appendChild(phoneElement);
+    });
+  });
+
+  function vaiAllaPaginaTelefono(nomeTelefono) {
+    let telefoni = JSON.parse(localStorage.getItem('telefoni')) || [];
+    for (let i = 0; i < telefoni.length; i++) {
+      if (telefoni[i].nome === nomeTelefono) {
+        localStorage.setItem('telefono', JSON.stringify(telefoni[i]));
+        window.location.href = 'Dettagli.html';
+        break;
       }
     }
-  </script>
+  }
+</script>
+
 </body>
 </html>
+
+
+
+
+    
+   
