--- a/apple.html
+++ b/apple.html
@@ -8,12 +8,13 @@
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      background-color: #f0f0f0;
+      background-color: #000;
+      color: #fff;
     }
 
     .header {
-      background-color: #90ee90;
-      color: white;
+      background-color: #ff6600; /* Arancione */
+      color: #fff;
       text-align: center;
       padding: 20px;
       font-size: 24px;
@@ -27,8 +28,8 @@
       color: white;
       font-size: 16px;
       text-decoration: none;
-      background-color: rgba(0, 0, 0, 0.3);
-      padding: 5px 10px;
+      background-color: rgba(255, 102, 0, 0.8); /* Arancione trasparente */
+      padding: 6px 12px;
       border-radius: 4px;
       z-index: 1000;
     }
@@ -56,16 +57,16 @@
       width: 150px;
       height: 150px;
       object-fit: contain;
-      background-color: white;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      background-color: #fff;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(255, 102, 0, 0.5);
     }
 
     .phone div {
       margin-top: 10px;
       font-weight: bold;
       font-size: 16px;
-      color: #333;
+      color: #ffcc99;
     }
 
     @media (max-width: 600px) {
