--- a/RegistrazioneE-commerce.html
+++ b/RegistrazioneE-commerce.html
@@ -279,7 +279,7 @@
       localStorage.setItem("datiUtente", JSON.stringify(datiUtente));
       localStorage.setItem("telefoni", JSON.stringify(telefoni));
 
-      window.location.href = "HomeE-commerce.html";
+      window.location.href = "HomE-commerce.html";
     });
   </script>
 </body>
