--- a/Carrello.html
+++ b/Carrello.html
@@ -28,7 +28,7 @@
   </style>
 </head>
 <body>
-  <a class="home-link" onclick="window.location.href='HomeE-commerce.html'">Home</a>
+  <a class="home-link" onclick="window.location.href='HomE-commerce.html'">Home</a>
   <div class="header">Benvenuto nel tuo carrello</div>
   <div class="cart-container" id="cartContainer"></div>
   <div class="total" id="totalPrice"></div>
