--- a/Carrello.html
+++ b/Carrello.html
@@ -5,25 +5,122 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Carrello</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; background-color: #f0f0f0; }
-    .header { background-color: #90ee90; color: white; text-align: center; padding: 20px; font-size: 24px; font-weight: bold; }
-    .home-link { position: absolute; top: 10px; left: 10px; color: white; font-size: 16px; text-decoration: none; background-color: rgba(0,0,0,0.3); padding: 5px 10px; border-radius: 4px; }
-    .home-link:hover { background-color: #555; }
-    .cart-container { max-width: 800px; margin: 20px auto; padding: 10px; background: white; border-radius: 5px; }
-    .cart-item { display: flex; justify-content: space-between; align-items: center; padding: 10px 0; border-bottom: 1px solid #ddd; }
-    .cart-item:last-child { border-bottom: none; }
-    .item-info { flex: 1; }
-    .item-info h3 { margin: 0 0 5px; font-size: 18px; }
-    .item-info p { margin: 0; }
-    .item-actions button { background-color: #dc3545; color: white; padding: 6px 12px; border: none; border-radius: 4px; cursor: pointer; margin-left: 10px; }
-    .item-actions button:hover { background-color: #c82333; }
-    .total { text-align: right; font-size: 20px; margin-top: 15px; }
-    .actions { text-align: center; margin: 20px 0; }
-    .actions button { background-color: #28a745; color: white; padding: 10px 20px; margin: 0 10px; border: none; border-radius: 4px; cursor: pointer; }
-    .actions button:hover { background-color: #218838; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background-color: #121212; /* Nero */
+      color: #f0f0f0; /* Testo chiaro */
+    }
+
+    .header {
+      background-color: #ff6600; /* Arancione */
+      color: black;
+      text-align: center;
+      padding: 20px;
+      font-size: 24px;
+      font-weight: bold;
+    }
+
+    .home-link {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      color: #fff;
+      font-size: 16px;
+      text-decoration: none;
+      background-color: #333;
+      padding: 5px 12px;
+      border-radius: 5px;
+      transition: background-color 0.3s, box-shadow 0.3s;
+    }
+
+    .home-link:hover {
+      background-color: #ff6600;
+      box-shadow: 0 0 10px #ff6600;
+    }
+
+    .cart-container {
+      max-width: 800px;
+      margin: 20px auto;
+      padding: 10px;
+      background: #1e1e1e;
+      border-radius: 5px;
+    }
+
+    .cart-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 0;
+      border-bottom: 1px solid #444;
+    }
+
+    .cart-item:last-child {
+      border-bottom: none;
+    }
+
+    .item-info h3 {
+      margin: 0 0 5px;
+      font-size: 18px;
+      color: #ffcc80;
+    }
+
+    .item-info p {
+      margin: 0;
+      color: #ccc;
+    }
+
+    .item-actions button {
+      background-color: #e53935;
+      color: white;
+      padding: 6px 12px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: background-color 0.3s, box-shadow 0.3s;
+    }
+
+    .item-actions button:hover {
+      background-color: #ff4444;
+      box-shadow: 0 0 10px #ff4444;
+    }
+
+    .total {
+      text-align: right;
+      font-size: 20px;
+      margin-top: 15px;
+      color: #ffa726;
+    }
+
+    .actions {
+      text-align: center;
+      margin: 20px 0;
+    }
+
+    .actions button {
+      background-color: #ff6600;
+      color: white;
+      padding: 10px 20px;
+      margin: 0 10px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: background-color 0.3s, box-shadow 0.3s;
+    }
+
+    .actions button:hover {
+      background-color: #ff8533;
+      box-shadow: 0 0 10px #ff8533;
+    }
+
     @media (max-width: 600px) {
-      .cart-item { flex-direction: column; align-items: flex-start; }
-      .item-actions { margin-top: 10px; }
+      .cart-item {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      .item-actions {
+        margin-top: 10px;
+      }
     }
   </style>
 </head>
@@ -36,6 +133,7 @@
     <button id="confirmBtn" onclick="confirmPurchase()">Conferma l'acquisto</button>
   </div>
 
+  <!-- Script JS identico al tuo, non modificato -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script>
     const { jsPDF } = window.jspdf;
