--- a/Carrello.html
+++ b/Carrello.html
@@ -126,7 +126,7 @@
 </head>
 <body>
   <a class="home-link" onclick="window.location.href='HomE-commerce.html'">Home</a>
-  <div class="header">Benvenuto nel tuo carrello</div>
+  <div style="color: white;" class="header">Ecco il tuo carrello</div>
   <div class="cart-container" id="cartContainer"></div>
   <div class="total" id="totalPrice"></div>
   <div class="actions">
