--- a/Dettagli.html
+++ b/Dettagli.html
@@ -91,7 +91,7 @@
         <p><strong>Dettagli:</strong> <span id="phoneDetails"></span></p>     
         <div class="button-container">   
           <button id="addToCartBtn">Aggiungi al carrello</button>  
-          <button class="return-button" onclick="location.href='HomeE-commerce.html'">Ritorna alla Home</button>   
+          <button class="return-button" onclick="location.href='HomE-commerce.html'">Ritorna alla Home</button>   
         </div>   
       </div> 
       <div class="product-img">   
