--- a/xiaomi.html
+++ b/xiaomi.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>xiaomi</title>
+  <title>Xiaomi</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      background-color: #f0f0f0;
+      background-color: #121212; /* Nero */
+      color: #f0f0f0;
     }
+
     .cart-link {      
       position: absolute;   
       top: 10px;   
@@ -17,13 +19,20 @@
       color: white;     
       font-size: 16px;      
       text-decoration: none;    
-      background-color: rgba(0,0,0,0.3);       
-      padding: 5px 10px;       
-      border-radius: 4px;    
-    }  
+      background-color: #333;       
+      padding: 5px 12px;       
+      border-radius: 4px;
+      transition: background-color 0.3s, box-shadow 0.3s;
+    }
+
+    .cart-link:hover {
+      background-color: #ff6600;
+      box-shadow: 0 0 10px #ff6600;
+    }
+
     .header {
-      background-color: #90ee90;
-      color: white;
+      background-color: #ff6600;
+      color: black;
       text-align: center;
       padding: 20px;
       font-size: 24px;
@@ -42,16 +51,27 @@
       text-align: center;
       cursor: pointer;
       width: 200px;
+      padding: 15px;
+      background-color: #1e1e1e;
+      border-radius: 8px;
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+
+    .phone:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 15px #ff6600;
     }
 
     .phone img {
       width: 150px;
       height: auto;
+      border-radius: 6px;
     }
 
     .phone div {
       margin-top: 10px;
       font-weight: bold;
+      color: #ffa726;
     }
   </style>
 </head>
@@ -61,9 +81,7 @@
     Xiaomi
   </div>
 
-  <div class="phones-container" id="phonesContainer">
-   
-  </div>
+  <div class="phones-container" id="phonesContainer"></div>
 
   <script>
     let telefoni = JSON.parse(localStorage.getItem('telefoni'));
