--- a/xiaomi.html
+++ b/xiaomi.html
@@ -76,11 +76,11 @@
   </style>
 </head>
 <body>
-  <a href="Carrello.html" class="cart-link">Carrello</a> 
-  <div class="header">
+  
+  <div style="color: white" class="header">
     Xiaomi
   </div>
-
+<a href="Carrello.html" class="cart-link">Carrello</a> 
   <div class="phones-container" id="phonesContainer"></div>
 
   <script>
